plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// Spring MVC / REST API
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// 소셜 로그인
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc17'
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// JSON 변환
	implementation 'com.fasterxml.jackson.core:jackson-databind'
}

tasks.named('test') {
	useJUnitPlatform()
}
